# sons-of-liberty

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  docker-compose.deployment.yml  docker-compose.yml  dockerfile  dockerfile-frontend  justfile  nginx.conf  pnpm-lock.yaml
.github/workflows/: ci.yaml  publish-docker.yaml
assets/views/: contracts.html  index.html  offers.html
assets/views/components/: header.html
config/: development.yaml  scheduler.development.yaml  scheduler.yaml  test.yaml
docker/: build-and-push.sh  docker-compose.deployment.yml  docker-compose.yaml  dockerfile  dockerfile-frontend  dockerfile.frontend  get-certificates.sh  nginx.conf  supervisord.conf
docker/nginx/: base.conf  development.conf  production.conf  staging.conf
examples/: playground.rs
frontend/: index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  vite.config.js
frontend/src/: App.tsx  index.css  index.tsx  layout.tsx  main.jsx  router.tsx  types.ts
frontend/src/app/: offer-page.tsx
migration/src/: lib.rs  m20250412_194431_add_nostr_profile_to_users.rs  m20250428_163347_seeds.rs  m20250507_171821_balances.rs
scripts/: drop-tables.txt
src/: app.rs  ddk.rs  lib.rs  sol.rs
src/common/: bitcoin_price.rs  dlcdevkit.rs  market.rs  mod.rs  nostr.rs  settings.rs
src/controllers/: auth.rs  balance.rs  contracts.rs  create.rs  hashrate.rs  home.rs  info.rs  mod.rs  nostr.rs  offers.rs  peers.rs  sync.rs  wallet.rs
src/middlewares/: auth.rs
src/models/: anchor_tx.rs  balances.rs  block.rs  contracts.rs  keychain.rs  mod.rs  network.rs  seeds.rs  tx.rs  txout.rs  users.rs  version.rs
src/tasks/: balance_updater.rs  freshdb.rs  mod.rs
src/views/: auth.rs  balances.rs  dashboard.rs  mod.rs
tests/models/: balances.rs  mod.rs  seeds.rs  users.rs
tests/requests/: auth.rs  balance.rs  contracts.rs  create.rs  hashrate.rs  info.rs  mod.rs  nostr.rs  offers.rs  peers.rs  prepare_data.rs  sync.rs  wallet.rs
tests/tasks/: balance_updater.rs  freshdb.rs  mod.rs
(+129 files in other folders)
