[workspace]

[package]
name = "sons-of-liberty"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "sons_of_liberty-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.14.0" }

[dependencies]
#======== LOCO ========#
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.19" }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = { version = "0.9.4" }
# /view engine
#======== LOCO ========#
bitcoin = { version = "0.32.5", features = ["serde"] }
ddk = { version = "0.0.14", path = "../dlcdevkit/ddk", features = ["sled", "lightning", "kormir"]}
ddk-manager = { version = "0.7.2", path = "../dlcdevkit/ddk-manager", features = ["use-serde"] }
ddk-payouts = { version = "0.0.14", path = "../dlcdevkit/payouts" }
homedir = "0.3.4"
dlc-messages = { version = "0.7.1", features = ["use-serde"] }
hex = "0.4.3"


[[bin]]
name = "sons_of_liberty-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
